# c64u-bbs

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup-bbs.sh
.claude/skills/: journal.md  update-docs.md
.githooks/: pre-commit  pre-push
assets/bbs/imagebbs/: Master_D1_260125.d81  Master_D2_260125.d81  PROVENANCE.md
assets/bbs/imagebbs/upstream/: 3.0 utilities.d81  Master_D1_260125.d81  Master_D2_260125.d81  _Read Me 2026_.txt
docs/: TOC.md  index.html  toc.json
docs/journal/: index.html
docs/journal/2026-04-11-first-modem-connection/: index.html
docs/journal/2026-04-11-project-kickoff/: index.html
docs/journal/2026-04-12-image-bbs-deploy/: index.html
docs/plans/: 001-milestone-confirm-C64U-modem-reachable-by-telnet.md  002-milestone-implement-image-3.0-bbs-plan.md
scripts/: fetch-imagebbs.sh  install-hooks.sh  update_docs_toc.py
src/c64u_bbs/: __init__.py
src/c64u_bbs/bbs/: autoanswer.bas  autoanswer.py  basic.py  bootloader.py  catalog.py  deployer.py
src/c64u_bbs/cli/: main.py
src/c64u_bbs/cli/commands/: bbs.py  config.py  discover.py  drives.py  files.py  info.py  run.py  smoke.py
src/c64u_bbs/client/: base.py  c64u.py  config.py
src/c64u_bbs/ftp/: client.py
src/c64u_bbs/models/: device.py  drives.py
tests/: conftest.py  test_bootloader.py  test_catalog.py  test_client.py  test_deployer.py  test_drives.py  test_ftp.py  test_runner.py
tests/fixtures/: drives.json  info.json
