[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "c64u-bbs"
version = "0.1.0"
description = "Deploy and manage a Commodore 64 BBS on the C64 Ultimate over the network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Allen Hammock" },
]
keywords = ["commodore-64", "bbs", "ultimate-64", "retro-computing"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
c64u = "c64u_bbs.cli.main:cli"

[project.urls]
Homepage = "https://github.com/brainvat/c64u-bbs"
Documentation = "https://brainvat.github.io/c64u-bbs/"
Repository = "https://github.com/brainvat/c64u-bbs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a real C64U device on the network",
]
